# habitat-sim

./: .coveragerc
.circleci/: config.yml
data/: default.phys_scene_config.json  default.physics_config.json
docs/pages/: attributesJSON.rst
examples/: settings.py
examples/colab_utils/: colab_install.sh
examples/tutorials/: navmesh_compute_util.py
examples/tutorials/colabs/: robotics_api_tutorial.ipynb
examples/tutorials/nb_python/: robotics_api_tutorial.py
habitat_sim/: simulator.py
src/cmake/: FindBullet.cmake  dependencies.cmake
src/esp/assets/: ResourceManager.cpp
src/esp/bindings/: AttributesManagersBindings.cpp  SensorBindings.cpp  ShortestPathBindings.cpp  SimBindings.cpp
src/esp/core/: ManagedContainer.h  ManagedContainerBase.cpp  ManagedContainerBase.h
src/esp/gfx/: CMakeLists.txt  CubeMap.h  LightSetup.cpp  LightSetup.h  MeshVisualizerDrawable.cpp  RenderCamera.cpp
src/esp/metadata/: MetadataMediator.cpp
src/esp/nav/: PathFinder.cpp  PathFinder.h
src/esp/physics/: CMakeLists.txt  PhysicsManager.h  RigidBase.h
src/esp/physics/pybullet/: CBulletPhysicsManager.cpp  CBulletPhysicsManager.h  CMakeLists.txt
src/esp/scene/: SceneNode.cpp  SceneNode.h
src/esp/sensor/: CMakeLists.txt  EquirectangularSensor.cpp  EquirectangularSensor.h  FisheyeSensor.cpp  Sensor.h
src/esp/sim/: Simulator.cpp  Simulator.h
src/shaders/: Shaders.conf
src/tests/: AttributesManagersTest.cpp  CMakeLists.txt  IOTest.cpp  PhysicsTest.cpp  SimTest.cpp
tests/: test_sensors.py
tools/: asan_suppressions.txt  lsan_suppressions.txt  run_ASAN.sh
(+13 files in other folders)
